Support binding content, add textDidChanged callback

--- a/Sources/CodeViewer/Resources/ace.bundle/index.html
+++ b/Sources/CodeViewer/Resources/ace.bundle/index.html
@@ -21,6 +21,12 @@
 <script>
     var editor = ace.edit("editor");
     editor.setShowPrintMargin(false);
+    
+    editor.session.on('change', function(delta) {
+        let message = editor.getValue();
+        window.webkit.messageHandlers.aceEditorDidChanged.postMessage(message);
+    });
+
     window.webkit.messageHandlers.aceEditorDidReady.postMessage(null); // Need at lead 1 arg
 </script>
 </body>
