Fix font size by set viewport

--- a/Sources/CodeViewer/Resources/ace.bundle/index.html
+++ b/Sources/CodeViewer/Resources/ace.bundle/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<!-- Set viewport. -->
+<meta name="viewport" content="initial-scale=1">
 <title>ACE in Action</title>
 <style type="text/css" media="screen">
     #editor {
